# GoIT_Web2_HW4

./: pyproject.toml  simple-server.py
application/: app.py  client.py  message.html  server.py
application/storage/: data.json
