[tool.poetry]
name = "goit-web2-hw4"
version = "0.1.0"
description = ""
authors = ["Serhii <90449769+Serhii-Olkhovskyi@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "goit_web2_hw4"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
